Closed
Bug 1436625
Opened 7 years ago
Closed 7 years ago
Intermittent GECKO(2841) | Assertion failure: !presContext->HasPendingMediaQueryUpdates() (Someone forgot to update media queries?), at /builds/worker/workspace/build/src/layout/base/ServoRestyleManager.cpp:1103
Categories
(Core :: Layout, defect, P5)
Core
Layout
Tracking
()
RESOLVED
FIXED
mozilla60
Tracking | Status | |
---|---|---|
firefox60 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: emilio)
References
Details
(Keywords: intermittent-failure)
Attachments
(1 file, 1 obsolete file)
Filed by: apavel [at] mozilla.com
https://treeherder.mozilla.org/logviewer.html#?job_id=160975058&repo=autoland
https://queue.taskcluster.net/v1/task/CMAPQadbRWSMzq5NYMjpaA/runs/0/artifacts/public/logs/live_backing.log
[task 2018-02-08T00:02:05.610Z] 00:02:05 INFO - TEST-START | dom/media/tests/mochitest/test_getUserMedia_basicScreenshare.html
[task 2018-02-08T00:02:05.651Z] 00:02:05 INFO - GECKO(2841) | [Child 2888, Main Thread] WARNING: NS_ENSURE_TRUE(node) failed: file /builds/worker/workspace/build/src/layout/base/nsDocumentViewer.cpp, line 3713
[task 2018-02-08T00:02:05.808Z] 00:02:05 INFO - GECKO(2841) | ++DOMWINDOW == 6 (0xd75ce400) [pid = 2888] [serial = 59] [outer = 0xe8b4b700]
[task 2018-02-08T00:02:05.993Z] 00:02:05 INFO - GECKO(2841) | TEST DEVICES: Using media devices:
[task 2018-02-08T00:02:05.995Z] 00:02:05 INFO - GECKO(2841) | audio: Monitor of Null Output
[task 2018-02-08T00:02:05.996Z] 00:02:05 INFO - GECKO(2841) | video: Dummy video device (0x0000)
[task 2018-02-08T00:02:06.193Z] 00:02:06 INFO - GECKO(2841) | [Child 2888, Main Thread] WARNING: NS_ENSURE_TRUE(node) failed: file /builds/worker/workspace/build/src/layout/base/nsDocumentViewer.cpp, line 3713
[task 2018-02-08T00:02:06.922Z] 00:02:06 INFO - GECKO(2841) | --DOMWINDOW == 5 (0xd65e9000) [pid = 2888] [serial = 58] [outer = (nil)] [url = http://mochi.test:8888/tests/SimpleTest/iframe-between-tests.html]
[task 2018-02-08T00:02:06.924Z] 00:02:06 INFO - GECKO(2841) | --DOMWINDOW == 4 (0xd65e6400) [pid = 2888] [serial = 57] [outer = (nil)] [url = http://mochi.test:8888/tests/dom/media/tests/mochitest/test_getUserMedia_basicAudio_loopback.html]
[task 2018-02-08T00:02:07.204Z] 00:02:07 INFO - GECKO(2841) | Assertion failure: !presContext->HasPendingMediaQueryUpdates() (Someone forgot to update media queries?), at /builds/worker/workspace/build/src/layout/base/ServoRestyleManager.cpp:1103
[task 2018-02-08T00:02:40.628Z] 00:02:40 INFO - GECKO(2841) | #01: mozilla::ServoRestyleManager::DoProcessPendingRestyles [layout/base/ServoRestyleManager.cpp:1102]
[task 2018-02-08T00:02:40.629Z] 00:02:40 INFO -
[task 2018-02-08T00:02:40.631Z] 00:02:40 INFO - GECKO(2841) | #02: mozilla::ServoRestyleManager::UpdateOnlyAnimationStyles [layout/base/ServoRestyleManager.cpp:1283]
[task 2018-02-08T00:02:40.632Z] 00:02:40 INFO -
[task 2018-02-08T00:02:40.634Z] 00:02:40 INFO - GECKO(2841) | #03: FlushThrottledStyles [layout/base/RestyleManagerInlines.h:87]
[task 2018-02-08T00:02:40.635Z] 00:02:40 INFO -
[task 2018-02-08T00:02:40.637Z] 00:02:40 INFO - GECKO(2841) | #04: nsDocument::EnumerateSubDocuments [dom/base/nsDocument.cpp:8227]
[task 2018-02-08T00:02:40.638Z] 00:02:40 INFO -
[task 2018-02-08T00:02:40.640Z] 00:02:40 INFO - GECKO(2841) | #05: FlushThrottledStyles [layout/base/PresShell.cpp:6816]
[task 2018-02-08T00:02:40.641Z] 00:02:40 INFO -
[task 2018-02-08T00:02:40.642Z] 00:02:40 INFO - GECKO(2841) | #06: mozilla::PresShell::HandleEvent [layout/base/PresShell.cpp:7073]
[task 2018-02-08T00:02:40.643Z] 00:02:40 INFO -
[task 2018-02-08T00:02:40.644Z] 00:02:40 INFO - GECKO(2841) | #07: nsViewManager::DispatchEvent [view/nsViewManager.cpp:813]
[task 2018-02-08T00:02:40.645Z] 00:02:40 INFO -
[task 2018-02-08T00:02:40.648Z] 00:02:40 INFO - GECKO(2841) | #08: nsView::HandleEvent [view/nsView.cpp:1138]
[task 2018-02-08T00:02:40.649Z] 00:02:40 INFO -
[task 2018-02-08T00:02:40.651Z] 00:02:40 INFO - GECKO(2841) | #09: mozilla::widget::PuppetWidget::DispatchEvent [widget/PuppetWidget.cpp:409]
[task 2018-02-08T00:02:40.652Z] 00:02:40 INFO -
[task 2018-02-08T00:02:40.654Z] 00:02:40 INFO - GECKO(2841) | #10: mozilla::layers::APZCCallbackHelper::DispatchWidgetEvent [gfx/layers/apz/util/APZCCallbackHelper.cpp:499]
[task 2018-02-08T00:02:40.655Z] 00:02:40 INFO -
[task 2018-02-08T00:02:40.656Z] 00:02:40 INFO - GECKO(2841) | #11: mozilla::dom::TabChild::DispatchWidgetEventViaAPZ [dom/ipc/TabChild.cpp:1797]
[task 2018-02-08T00:02:40.657Z] 00:02:40 INFO -
[task 2018-02-08T00:02:40.658Z] 00:02:40 INFO - GECKO(2841) | #12: mozilla::dom::TabChild::HandleRealMouseButtonEvent [dom/ipc/TabChild.cpp:1738]
[task 2018-02-08T00:02:40.659Z] 00:02:40 INFO -
[task 2018-02-08T00:02:40.660Z] 00:02:40 INFO - GECKO(2841) | #13: mozilla::dom::TabChild::RecvRealMouseButtonEvent [ipc/glue/ProtocolUtils.h:251]
[task 2018-02-08T00:02:40.661Z] 00:02:40 INFO -
[task 2018-02-08T00:02:40.662Z] 00:02:40 INFO - GECKO(2841) | #14: mozilla::dom::TabChild::RecvSynthMouseMoveEvent [dom/ipc/TabChild.cpp:1664]
[task 2018-02-08T00:02:40.663Z] 00:02:40 INFO -
[task 2018-02-08T00:02:40.760Z] 00:02:40 INFO - GECKO(2841) | --DOMWINDOW == 10 (0xd89b4000) [pid = 2841] [serial = 25] [outer = (nil)] [url = about:blank]
[task 2018-02-08T00:02:40.760Z] 00:02:40 INFO - GECKO(2841) | --DOMWINDOW == 9 (0xda970400) [pid = 2841] [serial = 23] [outer = (nil)] [url = about:blank]
[task 2018-02-08T00:03:08.617Z] 00:03:08 INFO - GECKO(2841) | --DOMWINDOW == 8 (0xcc57bc00) [pid = 2841] [serial = 27] [outer = (nil)] [url = about:blank]
[task 2018-02-08T00:09:18.614Z] 00:09:18 INFO - Buffered messages logged at 00:02:06
[task 2018-02-08T00:09:18.615Z] 00:09:18 INFO - TEST-PASS | dom/media/tests/mochitest/test_getUserMedia_basicScreenshare.html | A valid string reason is expected
[task 2018-02-08T00:09:18.616Z] 00:09:18 INFO - TEST-PASS | dom/media/tests/mochitest/test_getUserMedia_basicScreenshare.html | Reason cannot be empty
[task 2018-02-08T00:09:18.617Z] 00:09:18 INFO - Buffered messages finished
[task 2018-02-08T00:09:18.617Z] 00:09:18 ERROR - TEST-UNEXPECTED-TIMEOUT | dom/media/tests/mochitest/test_getUserMedia_basicScreenshare.html | application timed out after 370 seconds with no output
[task 2018-02-08T00:09:18.618Z] 00:09:18 ERROR - Force-terminating active process(es).
[task 2018-02-08T00:09:18.620Z] 00:09:18 INFO - Determining child pids from psutil...
[task 2018-02-08T00:09:18.628Z] 00:09:18 INFO - [2932]
[task 2018-02-08T00:09:18.629Z] 00:09:18 INFO - ==> process 2841 launched child process 2861
[task 2018-02-08T00:09:18.630Z] 00:09:18 INFO - ==> process 2841 launched child process 2888
[task 2018-02-08T00:09:18.632Z] 00:09:18 INFO - ==> process 2841 launched child process 2932
[task 2018-02-08T00:09:18.633Z] 00:09:18 INFO - ==> process 2841 launched child process 3154
[task 2018-02-08T00:09:18.634Z] 00:09:18 INFO - Found child pids: set([2888, 3154, 2932, 2861])
[task 2018-02-08T00:09:18.635Z] 00:09:18 INFO - Failed to get child procs
[task 2018-02-08T00:09:18.635Z] 00:09:18 INFO - Killing process: 2888
[task 2018-02-08T00:09:18.636Z] 00:09:18 INFO - TEST-INFO | started process screentopng
[task 2018-02-08T00:09:18.960Z] 00:09:18 INFO - TEST-INFO | screentopng: exit 0
[task 2018-02-08T00:09:18.962Z] 00:09:18 INFO - Can't trigger Breakpad, process no longer exists
[task 2018-02-08T00:09:18.962Z] 00:09:18 INFO - Killing process: 3154
[task 2018-02-08T00:09:18.962Z] 00:09:18 INFO - Not taking screenshot here: see the one that was previously logged
[task 2018-02-08T00:09:18.962Z] 00:09:18 INFO - Can't trigger Breakpad, process no longer exists
[task 2018-02-08T00:09:18.963Z] 00:09:18 INFO - Killing process: 2932
[task 2018-02-08T00:09:18.964Z] 00:09:18 INFO - Not taking screenshot here: see the one that was previously logged
[task 2018-02-08T00:09:18.964Z] 00:09:18 INFO - Killing process: 2861
[task 2018-02-08T00:09:18.965Z] 00:09:18 INFO - Not taking screenshot here: see the one that was previously logged
[task 2018-02-08T00:09:18.965Z] 00:09:18 INFO - Can't trigger Breakpad, process no longer exists
[task 2018-02-08T00:09:18.966Z] 00:09:18 INFO - Killing process: 2841
[task 2018-02-08T00:09:18.967Z] 00:09:18 INFO - Not taking screenshot here: see the one that was previously logged
[task 2018-02-08T00:09:19.217Z] 00:09:19 INFO - psutil found pid 2841 dead
[task 2018-02-08T00:09:19.362Z] 00:09:19 WARNING - runtests.py | Failed to get app exit code - running/crashed?
[task 2018-02-08T00:09:19.363Z] 00:09:19 INFO - TEST-INFO | Main app process: exit 0
[task 2018-02-08T00:09:19.363Z] 00:09:19 INFO - runtests.py | Application ran for: 0:08:58.236760
[task 2018-02-08T00:09:19.363Z] 00:09:19 INFO - zombiecheck | Reading PID log: /tmp/tmpv1P94hpidlog
[task 2018-02-08T00:09:19.364Z] 00:09:19 INFO - ==> process 2841 launched child process 2861
[task 2018-02-08T00:09:19.364Z] 00:09:19 INFO - ==> process 2841 launched child process 2888
[task 2018-02-08T00:09:19.364Z] 00:09:19 INFO - ==> process 2841 launched child process 2932
[task 2018-02-08T00:09:19.365Z] 00:09:19 INFO - ==> process 2841 launched child process 3154
[task 2018-02-08T00:09:19.365Z] 00:09:19 INFO - zombiecheck | Checking for orphan process with PID: 2888
[task 2018-02-08T00:09:19.365Z] 00:09:19 INFO - zombiecheck | Checking for orphan process with PID: 3154
[task 2018-02-08T00:09:19.365Z] 00:09:19 INFO - zombiecheck | Checking for orphan process with PID: 2932
[task 2018-02-08T00:09:19.366Z] 00:09:19 INFO - zombiecheck | Checking for orphan process with PID: 2861
[task 2018-02-08T00:09:19.366Z] 00:09:19 INFO - mozcrash Copy/paste: /usr/local/bin/linux64-minidump_stackwalk /tmp/tmpN87SXp.mozrunner/minidumps/2b45f440-245d-4b3d-cce5-b671fb7e9e34.dmp /builds/worker/workspace/build/symbols
[task 2018-02-08T00:09:28.395Z] 00:09:28 INFO - mozcrash Saved minidump as /builds/worker/workspace/build/blobber_upload_dir/2b45f440-245d-4b3d-cce5-b671fb7e9e34.dmp
[task 2018-02-08T00:09:28.396Z] 00:09:28 INFO - mozcrash Saved app info as /builds/worker/workspace/build/blobber_upload_dir/2b45f440-245d-4b3d-cce5-b671fb7e9e34.extra
[task 2018-02-08T00:09:28.458Z] 00:09:28 INFO - PROCESS-CRASH | Main app process exited normally | application crashed [@ linux-gate.so + 0xcd9]
[task 2018-02-08T00:09:28.460Z] 00:09:28 INFO - Crash dump filename: /tmp/tmpN87SXp.mozrunner/minidumps/2b45f440-245d-4b3d-cce5-b671fb7e9e34.dmp
[task 2018-02-08T00:09:28.460Z] 00:09:28 INFO - Operating system: Linux
[task 2018-02-08T00:09:28.461Z] 00:09:28 INFO - 0.0.0 Linux 4.4.0-98-generic #121~14.04.1-Ubuntu SMP Wed Oct 11 11:54:55 UTC 2017 x86_64
[task 2018-02-08T00:09:28.462Z] 00:09:28 INFO - CPU: x86
[task 2018-02-08T00:09:28.463Z] 00:09:28 INFO - GenuineIntel family 6 model 62 stepping 4
[task 2018-02-08T00:09:28.463Z] 00:09:28 INFO - 2 CPUs
[task 2018-02-08T00:09:28.464Z] 00:09:28 INFO -
[task 2018-02-08T00:09:28.465Z] 00:09:28 INFO - GPU: UNKNOWN
[task 2018-02-08T00:09:28.465Z] 00:09:28 INFO -
[task 2018-02-08T00:09:28.466Z] 00:09:28 INFO - Crash reason: SIGABRT
[task 2018-02-08T00:09:28.467Z] 00:09:28 INFO - Crash address: 0x3c9
[task 2018-02-08T00:09:28.467Z] 00:09:28 INFO - Process uptime: not available
[task 2018-02-08T00:09:28.468Z] 00:09:28 INFO -
[task 2018-02-08T00:09:28.468Z] 00:09:28 INFO - Thread 0 (crashed)
[task 2018-02-08T00:09:28.469Z] 00:09:28 INFO - 0 linux-gate.so + 0xcd9
[task 2018-02-08T00:09:28.470Z] 00:09:28 INFO - eip = 0xf7731cd9 esp = 0xfffc3c74 ebp = 0xfffc3ce8 ebx = 0xe4bbd920
[task 2018-02-08T00:09:28.471Z] 00:09:28 INFO - esi = 0xf7124820 edi = 0xe4bbd920 eax = 0xfffffffc ecx = 0x00000004
[task 2018-02-08T00:09:28.471Z] 00:09:28 INFO - edx = 0xffffffff efl = 0x00000292
[task 2018-02-08T00:09:28.472Z] 00:09:28 INFO - Found by: given as instruction pointer in context
[task 2018-02-08T00:09:28.473Z] 00:09:28 INFO - 1 libglib-2.0.so.0.4800.2 + 0x4711c
[task 2018-02-08T00:09:28.474Z] 00:09:28 INFO - eip = 0xf5dd711c esp = 0xfffc3cf0 ebp = 0x00000004
[task 2018-02-08T00:09:28.475Z] 00:09:28 INFO - Found by: previous frame's frame pointer
[task 2018-02-08T00:09:28.476Z] 00:09:28 INFO - 2 libglib-2.0.so.0.4800.2 + 0x8cfec
[task 2018-02-08T00:09:28.477Z] 00:09:28 INFO - eip = 0xf5e1cfec esp = 0xfffc3d00 ebp = 0x00000004
[task 2018-02-08T00:09:28.478Z] 00:09:28 INFO - Found by: stack scanning
[task 2018-02-08T00:09:28.478Z] 00:09:28 INFO - 3 libxul.so!IsFrameContentNodeInNamespace [nsNativeThemeGTK.cpp:79604510fe9acc73136a9f926478ec83a841e699 : 115 + 0x4]
[task 2018-02-08T00:09:28.479Z] 00:09:28 INFO - eip = 0xf15ccac5 esp = 0xfffc3d04 ebp = 0x00000004
[task 2018-02-08T00:09:28.480Z] 00:09:28 INFO - Found by: stack scanning
[task 2018-02-08T00:09:28.481Z] 00:09:28 INFO - 4 libglib-2.0.so.0.4800.2 + 0x1285b0
[task 2018-02-08T00:09:28.482Z] 00:09:28 INFO - eip = 0xf5eb85b0 esp = 0xfffc3d14 ebp = 0x00000004
[task 2018-02-08T00:09:28.483Z] 00:09:28 INFO - Found by: stack scanning
[task 2018-02-08T00:09:28.484Z] 00:09:28 INFO - 5 libglib-2.0.so.0.4800.2 + 0x46f8d
[task 2018-02-08T00:09:28.485Z] 00:09:28 INFO - eip = 0xf5dd6f8d esp = 0xfffc3d2c ebp = 0xfffc3d48
[task 2018-02-08T00:09:28.485Z] 00:09:28 INFO - Found by: stack scanning
[task 2018-02-08T00:09:28.486Z] 00:09:28 INFO - 6 libglib-2.0.so.0.4800.2 + 0x47275
[task 2018-02-08T00:09:28.487Z] 00:09:28 INFO - eip = 0xf5dd7275 esp = 0xfffc3d50 ebp = 0x00000000
[task 2018-02-08T00:09:28.488Z] 00:09:28 INFO - Found by: previous frame's frame pointer
[task 2018-02-08T00:09:28.489Z] 00:09:28 INFO - 7 libxul.so!_fini + 0x19b67dc
[task 2018-02-08T00:09:28.489Z] 00:09:28 INFO - eip = 0xf5477000 esp = 0xfffc3d54 ebp = 0x00000000
[task 2018-02-08T00:09:28.490Z] 00:09:28 INFO - Found by: stack scanning
Assignee | ||
Comment 1•7 years ago
|
||
So this is from FlushThrottledStyles... Hiro, can you point out what's our setup there again? We do flush normal restyles from FlushThrottledStyles, right?
Why doesn't it need to care about media query features / font face set / etc? Also, given it basically is the same than a normal style flush on a stylo world, why do we need it instead of just flushing style on the document normally?
Flags: needinfo?(hikezoe)
Assignee | ||
Comment 2•7 years ago
|
||
Ok, so I discussed a bit with Brian and Hiro about this, and I have no great solution for this.
In particular, this wants to flush styles for throttled animations (bug 914847), but not others. See the summary in bug 914847 comment 11.
The thing is what to do about pending style changes. In particular, if an stylesheet has been added to the document we right now bring it up to date. I think the process is sound because we only recascade and thus we don't use the new rules (though what's up with CSSOM mutating them?), and we don't process other restyles.
But still it'd be nice to have the invariant of having all style data up-to-date when we process styles...
Given this only cares of updating the positions of the frames that move around and may be throttled in the compositor (basically only transform animations iiuc), why do we need to use the style system for this at all?
Comment 3•7 years ago
|
||
I will try to make FlushThrottledStyles update only throttled transform animations in this bug. And I guess 'without the style system' what Emilio told on IRC is that we update rule node for the throttled transform animations and update the style context directly? It's very attractive plan for me. :) And as a side effect of it, it results more plausible position for transform:inherit elements in the throttled transform element because of bug 1039799.
Assignee: nobody → hikezoe
Status: NEW → ASSIGNED
Flags: needinfo?(hikezoe)
Assignee | ||
Comment 4•7 years ago
|
||
(In reply to Hiroyuki Ikezoe (:hiro) from comment #3)
> I will try to make FlushThrottledStyles update only throttled transform
> animations in this bug. And I guess 'without the style system' what Emilio
> told on IRC is that we update rule node for the throttled transform
> animations and update the style context directly? It's very attractive plan
> for me. :) And as a side effect of it, it results more plausible position
> for transform:inherit elements in the throttled transform element because of
> bug 1039799.
Hmm, I was thinking of updating the frame position directly, but that may not be great either. If we need to go through the style system we need to whitelist the assertion, which is ok I think based on our IRC conversation today.
The only thing that would look fishy is if CSSOM mutated a rule that is on the rule tree of one of these elements. That would be fixed by bug 1404006.
Comment hidden (Intermittent Failures Robot) |
Comment hidden (mozreview-request) |
Comment hidden (mozreview-request) |
Assignee | ||
Comment 8•7 years ago
|
||
Comment on attachment 8950700 [details]
Bug 1436625: Fix restyle markers to mark animation-only restyles properly.
So we use these for testing... This is wrong though, we're putting a timeline on something that barely takes time.
Attachment #8950700 -
Flags: review?(hikezoe)
Comment 9•7 years ago
|
||
mozreview-review |
Comment on attachment 8950699 [details]
Bug 1436625: Whitelist the assertion for the throttled animation flush.
https://reviewboard.mozilla.org/r/219950/#review225788
Attachment #8950699 -
Flags: review?(hikezoe) → review+
Comment 10•7 years ago
|
||
mozreview-review |
Comment on attachment 8950700 [details]
Bug 1436625: Fix restyle markers to mark animation-only restyles properly.
https://reviewboard.mozilla.org/r/219952/#review225790
Though I understand what this change fixes, but I think this might break some test cases in dom/animations/test/mozilla/test_restyles.html
In the test we are also counting (want to know) how many restyle requests have been done for styling. With this patch, multiple restyle requests are collapsed into a single request, right? I understand this way is no so good in some cases but if we do fix it, we also need to align the test altogether.
Please leave these code as it is for now.
Thanks!
Assignee | ||
Comment 11•7 years ago
|
||
(In reply to Hiroyuki Ikezoe (:hiro) from comment #10)
> Comment on attachment 8950700 [details]
> Bug 1436625: Fix restyle markers to mark animation-only restyles properly.
>
> https://reviewboard.mozilla.org/r/219952/#review225790
>
> Though I understand what this change fixes, but I think this might break
> some test cases in dom/animations/test/mozilla/test_restyles.html
>
> In the test we are also counting (want to know) how many restyle requests
> have been done for styling. With this patch, multiple restyle requests are
> collapsed into a single request, right? I understand this way is no so good
> in some cases but if we do fix it, we also need to align the test altogether.
>
> Please leave these code as it is for now.
> Thanks!
Right, we probably want to just keep a count of animation restyles requested, or something like that.
Comment hidden (mozreview-request) |
Assignee | ||
Updated•7 years ago
|
Attachment #8950700 -
Attachment is obsolete: true
Comment 13•7 years ago
|
||
mozreview-review |
Comment on attachment 8950699 [details]
Bug 1436625: Whitelist the assertion for the throttled animation flush.
https://reviewboard.mozilla.org/r/219950/#review225920
::: layout/base/ServoRestyleManager.cpp:1102
(Diff revision 2)
> - MOZ_ASSERT(!presContext->HasPendingMediaQueryUpdates(),
> + // NOTE(emilio): In the "flush animations" case, we only recascade animation
> + // styles, so we don't care about other styles, or new rules that apply to the
> + // page.
Is this true? It doesn't match my understanding of the comment of `ServoTraversalFlags::FlushThrottledAnimations`, and it doesn't seem to me that we are doing any less work when this flag is specified, do we?
Comment 14•7 years ago
|
||
(In reply to Xidorn Quan [:xidorn] UTC+10 from comment #13)
> Comment on attachment 8950699 [details]
> Bug 1436625: Whitelist the assertion for the throttled animation flush.
>
> https://reviewboard.mozilla.org/r/219950/#review225920
>
> ::: layout/base/ServoRestyleManager.cpp:1102
> (Diff revision 2)
> > - MOZ_ASSERT(!presContext->HasPendingMediaQueryUpdates(),
> > + // NOTE(emilio): In the "flush animations" case, we only recascade animation
> > + // styles, so we don't care about other styles, or new rules that apply to the
> > + // page.
>
> Is this true? It doesn't match my understanding of the comment of
> `ServoTraversalFlags::FlushThrottledAnimations`, and it doesn't seem to me
> that we are doing any less work when this flag is specified, do we?
The comment by Emilio represents what we should do eventually, I mean we should do it ideally. I am afraid I probably can't make it happen soon.
Comment 15•7 years ago
|
||
(In reply to Hiroyuki Ikezoe (:hiro) from comment #14)
> (In reply to Xidorn Quan [:xidorn] UTC+10 from comment #13)
> > Is this true? It doesn't match my understanding of the comment of
> > `ServoTraversalFlags::FlushThrottledAnimations`, and it doesn't seem to me
> > that we are doing any less work when this flag is specified, do we?
>
> The comment by Emilio represents what we should do eventually, I mean we
> should do it ideally. I am afraid I probably can't make it happen soon.
I'm concerned about that we are doing full restyle twice in some cases... Probably it would be less harmful if we can fix bug 1435940...
Assignee | ||
Comment 16•7 years ago
|
||
Hmm, you're right, I somehow confused FlushThrottledAnimations with the AnimationOnly flag... In any case yeah, we may end up restyling twice indeed, but that's no worse in any case that what it used to be I think... I wonder if that flush is the cause of bugs like bug 1417991...
I can try to fix the animation stuff I guess, and I'll tweak the comment.
Comment 17•7 years ago
|
||
See some of my findings in bug 1438078 comment 3, this was probably a regression from stylo and hiro tried to fix but failed.
Comment hidden (mozreview-request) |
Comment 19•7 years ago
|
||
Pushed by ecoal95@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/c15438b50b81
Whitelist the assertion for the throttled animation flush. r=hiro
Comment 20•7 years ago
|
||
We're sorry, Autoland could not rebase your commits for you automatically. Please manually rebase your commits and try again.
hg error in cmd: hg rebase -s 68c342b5ff86a80669bdf481c9e1d1cf15ca91fa -d 074032cf52d6: rebasing 447254:68c342b5ff86 "Bug 1436625: Whitelist the assertion for the throttled animation flush. r=hiro" (tip)
merging layout/base/ServoRestyleManager.cpp
warning: conflicts while merging layout/base/ServoRestyleManager.cpp! (edit, then use 'hg resolve --mark')
unresolved conflicts (see hg resolve, then hg rebase --continue)
Comment 21•7 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
status-firefox60:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla60
Comment hidden (Intermittent Failures Robot) |
Updated•7 years ago
|
Assignee: hikezoe → emilio
You need to log in
before you can comment on or make changes to this bug.
Description
•