Bug 1436625: Whitelist the assertion for the throttled animation flush. r=hiro

MozReview-Commit-ID: 6StJjbH5Y59